2006-11-10  C.J. Adams-Collier  <cjcollier@colliertech.org>
	Submission made on behalf of "Nick" <Xedecimal@gmail.com>
	* examples/glade/Engine.cs
	- Added lots of comments
	- replaced multiple calls to Show() with a single ShowAll()
	* examples/glade/GladeExample.cs
	- added [Widget] attributes to Gtk widgets
	- renamed "window" to "glwidget" to match the .glade file
	- added lots of comments
	- added modal dialog thinger
	* examples/resources/glwidget.glad
	- added dialog for modal test

2006-10-21  C.J. Adams-Collier  <cjcollier@colliertech.org>
	* TODO
	- noted a need to remove hard dependency on Tao.*
	- also noted that we should build examples if we find Tao.*,
	otherwise not
	
2006-06-19T13:57  C.J. Adams-Collier  <cjcollier@colliertech.org>
	re-factored code under the examples/MdlLoader directory
	
2006-06-19  C.J. Adams-Collier  <cjcollier@colliertech.org>

	Overview: This concludes the translation of the C version of
	Jenkara's mdl loader to C#.  To load a given .mdl file,
	instantiate the MdlLoader and call the Load() method on the
	object, passing the filename of the data file to load.  It won't
	do anything but print debugging info to STDOUT, but it looks like
	it correctly reads all the bytes :)
	
	* examples/MdlLoader/MdlLoader.cs
	- made struct members public
	- created readFrameData(), which reads frame data from the fstream
	passed as an argument.  Number of frames is retrieved from the
	mdl_t which is also passed as an argument
	- created readDAliasFrame(), which reads a frame from the fstream
	passed as an argument
	- created readDAliasGroup(), which reads a frame group from the
	fstream passed as an argument
	- created readTriVertX(), which reads a triangle and light normal
	index from the fstream passed as an argument
	
 
2006-06-18T19:56  C.J. Adams-Collier  <cjcollier@colliertech.org>
	* examples/MdlLoader/MdlLoader.cs
	- implemented methods to read the mdl_t struct and
	texgroup_struct[] array
	- publicized struct members