@@ -147,7 +147,7 @@ echo "Configuration summary"
 echo ""
 echo "   * Installation prefix: $prefix"
 echo "   * compiler: $CSC"
-echo "   * Tao.Opengl: $has_tao"
+echo "   * Tao.OpenGl: $has_tao"
 echo "   * Documentation: $enable_monodoc ($MONODOC)"
 echo ""
 echo "---"
